--- a/templates/personne/detail.html.twig
+++ b/templates/personne/detail.html.twig
@@ -11,7 +11,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-            <img src="{{ asset('images/default.png') }}"
+            <img src="{{ personne.path}}"
                 width = "150px"
                  height= "150px"
                  class="rounded-circle"
