--- a/templates/personne/index.html.twig
+++ b/templates/personne/index.html.twig
@@ -3,5 +3,38 @@
 {% block title %}Hello PersonneController!{% endblock %}
 
 {% block body %}
-{{ dump(personnes) }}
+    <div class="album py-5 bg-light">
+        <div class="container">
+
+            <div class="row">
+                {% for personne in personnes %}
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                        <img  src="{{ personne.path}}" width="100%" height="225">
+                        <div class="card-body">
+                            <p class="card-text">{{ personne.firstname }}  {{ personne.name }} a {{ personne.age }} ans.
+                            </p>
+                            <p>
+                                {{ personne.cin }}
+                            </p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="{{ path('personne.detail', {id: personne.id}) }}">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">
+                                            View
+                                        </button>
+                                    </a>
+                                    <a href="{{ path('personne.delete', {id: personne.id}) }}">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">delete</button>
+                                    </a>
+                                </div>
+                                <small class="text-muted">9 mins</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
