Gestion des formulaires

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{ asset('node_modules/bootstrap/dist/css/bootstrap.css') }}">
     <!-- Bootstrap core CSS-->
 
+    <link rel="stylesheet" href="{{ asset('node_modules/select2/dist/css/select2.min.css') }}">
     <!-- Custom fonts for this template-->
     <link href="{{ asset('vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css">
 
@@ -197,6 +198,10 @@
 <script src="{{ asset('vendor/jquery-easing/jquery.easing.min.js') }}"></script>
 
 <script src="{{ asset('js/sb-admin.min.js') }}"></script>
+
+<script src="{{ asset('node_modules/select2/dist/js/select2.js') }}"></script>
+
+<script src="{{ asset('js/selecct2.js') }}"></script>
 
 </body>
 
